# Evo2Sim

./: .gitignore  AUTHORS  AUTHORS.md  CMakeLists.txt  LICENSE  LICENSE.md  README.md  VERSION
cmake/: make.sh  make_clean.sh  make_debug.sh  make_no_graphics.sh
cmake/modules/: Config.h.in
doc/user_manual/: template.cls  user_manual.aux  user_manual.blg  user_manual.ist  user_manual.out  user_manual.tex  user_manual.toc
doc/user_manual/source/: installation_instructions.tex  introduction.tex  parameters_description.tex  simulation_viewer.tex  typical_usage.tex
docs/user_manual/: battail.sty  user_manual.tex  user_manual.toc
docs/user_manual/source/: introduction.tex  main_executables_description.tex  parameters_description.tex
example/: parameters.txt
src/: evo2sim_bootstrap.cpp  evo2sim_create.cpp  evo2sim_generate_figures.cpp  evo2sim_integrated_tests.cpp  evo2sim_recover_parameters.cpp  evo2sim_run.cpp  evo2sim_unitary_tests.cpp
src/AB_post_treatments/: evo2sim_AB_black_queen.cpp  evo2sim_AB_frequency_dependence.cpp  evo2sim_AB_last_individuals.cpp  evo2sim_AB_phylogenetic_diversity.cpp  evo2sim_AB_recover_metabolic_heatmaps.cpp  evo2sim_AB_recover_statistics.cpp  evo2sim_AB_recover_trophic_statistics.cpp  evo2sim_AB_run_competition_experiment.cpp  evo2sim_AB_trophic_groups_history.cpp
src/lib/: Cell.cpp  Cell.h  Enums.h  Environment.cpp  Environment.h  Genome.cpp  Genome.h  GraphicDisplay.cpp  GraphicDisplay.h  InheritedProteins.cpp  InheritedProteins.h  IntegratedTests.cpp  IntegratedTests.h  Macros.h  MutationEvent.cpp  MutationEvent.h  MutationVector.cpp  MutationVector.h  Node.cpp  Node.h  ODE.cpp  ODE.h  Parameters.cpp  Parameters.h  Population.cpp  Population.h  Prng.cpp  Prng.h  ReplicationReport.cpp  ReplicationReport.h  Simulation.cpp  Simulation.h  SpeciesList.cpp  SpeciesList.h  Statistics.cpp  Statistics.h  Structs.h  Tree.cpp  Tree.h  TrophicGroup.cpp  (+5 more)
src/lib/scripts/: change_version.py  environment_map.py  environment_to_js.py  genome_to_js.py  inherited_proteins_to_js.py  networks_to_js.py  plot_best_genome_structure.R  plot_best_phenotype.R  plot_phylogenetic_tree.R  plot_phylogenetic_tree_with_trophic_group.R  plot_phylogenetic_tree_with_trophic_level.R  statistics_to_js.py  test_equality_operator.py  track_cell.py  trophic_groups_to_js.py  trophic_network_to_js.py
src/lib/scripts/viewer/: viewer.html
src/lib/scripts/viewer/src/pages/: best_lineage.html  contact.html  environment_evolution.html  help.html  last_best_individual.html  license.html  parameters.html  phylogeny.html  population_evolution.html
xcode/Evo2Sim/Evo2Sim.xcodeproj/: project.pbxproj
xcode/Evo2Sim/Evo2Sim.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/Evo2Sim/Evo2Sim.xcodeproj/project.xcworkspace/xcuserdata/charlesrocabert.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/Evo2Sim/Evo2Sim.xcodeproj/xcuserdata/charlesrocabert.xcuserdatad/xcschemes/: Evo2Sim.xcscheme  xcschememanagement.plist
